--- a/Triod/mainwindow.ui
+++ b/Triod/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1000</width>
-    <height>900</height>
+    <width>1082</width>
+    <height>950</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,71 +18,95 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>10</y>
-      <width>1000</width>
-      <height>900</height>
+      <y>0</y>
+      <width>1082</width>
+      <height>951</height>
      </rect>
     </property>
     <widget class="QWidget" name="mainPage">
-     <widget class="QWidget" name="">
+     <widget class="ClickableLabel" name="goTheory">
       <property name="geometry">
        <rect>
-        <x>70</x>
-        <y>280</y>
+        <x>120</x>
+        <y>193</y>
         <width>861</width>
-        <height>591</height>
+        <height>131</height>
        </rect>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <widget class="ClickableLabel" name="goTheory">
-         <property name="font">
-          <font>
-           <family>Nunito</family>
-           <pointsize>28</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Теория</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="ClickableLabel" name="goDemo">
-         <property name="font">
-          <font>
-           <family>Nunito</family>
-           <pointsize>28</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Практикум</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="ClickableLabel" name="goExam">
-         <property name="font">
-          <font>
-           <family>Nunito</family>
-           <pointsize>28</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Проверка знаний</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-      </layout>
+      <property name="font">
+       <font>
+        <family>Nunito</family>
+        <pointsize>28</pointsize>
+       </font>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="mouseTracking">
+       <bool>true</bool>
+      </property>
+      <property name="text">
+       <string>Теория</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="ClickableLabel" name="goExam">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>590</y>
+        <width>861</width>
+        <height>131</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Nunito</family>
+        <pointsize>28</pointsize>
+       </font>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="mouseTracking">
+       <bool>true</bool>
+      </property>
+      <property name="text">
+       <string>Проверка знаний</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="ClickableLabel" name="goDemo">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>391</y>
+        <width>861</width>
+        <height>131</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Nunito</family>
+        <pointsize>28</pointsize>
+       </font>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="mouseTracking">
+       <bool>true</bool>
+      </property>
+      <property name="text">
+       <string>Практикум</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
      </widget>
     </widget>
     <widget class="Theory" name="theoryPage"/>
@@ -92,6 +116,17 @@
   </widget>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>ClickableLabel</class>
+   <extends>QLabel</extends>
+   <header location="global">clickablelabel.h</header>
+   <slots>
+    <signal>clicked()</signal>
+    <slot>on_theory_clicked()</slot>
+    <slot>on_PlusMinus_clicked()</slot>
+    <slot>on_MinusPlus_clicked()</slot>
+   </slots>
+  </customwidget>
   <customwidget>
    <class>Theory</class>
    <extends>QWidget</extends>
@@ -109,15 +144,6 @@
    <extends>QWidget</extends>
    <header location="global">exam.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>ClickableLabel</class>
-   <extends>QLabel</extends>
-   <header location="global">clickablelabel.h</header>
-   <slots>
-    <signal>clicked()</signal>
-    <slot>on_theory_clicked()</slot>
-   </slots>
   </customwidget>
  </customwidgets>
  <resources/>
