--- a/Triod/mainwindow.ui
+++ b/Triod/mainwindow.ui
@@ -35,7 +35,7 @@
       </property>
       <property name="font">
        <font>
-        <family>Nunito</family>
+        <family>Verdana</family>
         <pointsize>28</pointsize>
        </font>
       </property>
@@ -63,7 +63,7 @@
       </property>
       <property name="font">
        <font>
-        <family>Nunito</family>
+        <family>Verdana</family>
         <pointsize>28</pointsize>
        </font>
       </property>
@@ -91,7 +91,7 @@
       </property>
       <property name="font">
        <font>
-        <family>Nunito</family>
+        <family>Verdana</family>
         <pointsize>28</pointsize>
        </font>
       </property>
