--- a/Triod/theory.ui
+++ b/Triod/theory.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1000</width>
-    <height>900</height>
+    <width>1081</width>
+    <height>950</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,20 +16,66 @@
   <widget class="ClickableLabel" name="goMenu">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>70</y>
-     <width>321</width>
+     <x>360</x>
+     <y>860</y>
+     <width>361</width>
      <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Nunito</family>
-     <pointsize>28</pointsize>
+     <family>Verdana</family>
+     <pointsize>22</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>Вернуться в меню</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>80</y>
+     <width>1011</width>
+     <height>771</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::NoFrame</enum>
+   </property>
+  </widget>
+  <widget class="ClickableLabel" name="goMenu_2">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>10</y>
+     <width>431</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Verdana</family>
+     <pointsize>24</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
+     <stylestrategy>PreferAntialias</stylestrategy>
+    </font>
+   </property>
+   <property name="text">
+    <string>Триод. Краткая справка</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
@@ -41,6 +87,8 @@
    <slots>
     <signal>clicked()</signal>
     <slot>on_theory_clicked()</slot>
+    <slot>on_PlusMinus_clicked()</slot>
+    <slot>on_MinusPlus_clicked()</slot>
    </slots>
   </customwidget>
  </customwidgets>
