--- a/Triod/demonstration.ui
+++ b/Triod/demonstration.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1082</width>
+    <width>1212</width>
     <height>950</height>
    </rect>
   </property>
@@ -16,9 +16,9 @@
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>-20</x>
      <y>0</y>
-     <width>1081</width>
+     <width>1261</width>
      <height>950</height>
     </rect>
    </property>
@@ -30,8 +30,8 @@
     <widget class="ClickableLabel" name="goMenu">
      <property name="geometry">
       <rect>
-       <x>370</x>
-       <y>850</y>
+       <x>460</x>
+       <y>880</y>
        <width>351</width>
        <height>61</height>
       </rect>
@@ -55,8 +55,8 @@
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>610</x>
-       <y>530</y>
+       <x>730</x>
+       <y>570</y>
        <width>31</width>
        <height>43</height>
       </rect>
@@ -77,8 +77,8 @@
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>610</x>
-       <y>640</y>
+       <x>730</x>
+       <y>680</y>
        <width>31</width>
        <height>43</height>
       </rect>
@@ -99,8 +99,8 @@
     <widget class="QLabel" name="label_19">
      <property name="geometry">
       <rect>
-       <x>650</x>
-       <y>750</y>
+       <x>770</x>
+       <y>790</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -121,8 +121,8 @@
     <widget class="QLabel" name="label_20">
      <property name="geometry">
       <rect>
-       <x>650</x>
-       <y>650</y>
+       <x>770</x>
+       <y>690</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -143,8 +143,8 @@
     <widget class="QLabel" name="label_21">
      <property name="geometry">
       <rect>
-       <x>650</x>
-       <y>540</y>
+       <x>770</x>
+       <y>580</y>
        <width>16</width>
        <height>31</height>
       </rect>
@@ -165,8 +165,8 @@
     <widget class="QLabel" name="label_22">
      <property name="geometry">
       <rect>
-       <x>690</x>
-       <y>540</y>
+       <x>810</x>
+       <y>580</y>
        <width>101</width>
        <height>20</height>
       </rect>
@@ -187,8 +187,8 @@
     <widget class="QLabel" name="label_23">
      <property name="geometry">
       <rect>
-       <x>800</x>
-       <y>540</y>
+       <x>920</x>
+       <y>580</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -209,8 +209,8 @@
     <widget class="QLabel" name="label_24">
      <property name="geometry">
       <rect>
-       <x>900</x>
-       <y>540</y>
+       <x>1020</x>
+       <y>580</y>
        <width>41</width>
        <height>20</height>
       </rect>
@@ -231,8 +231,8 @@
     <widget class="QLabel" name="label_26">
      <property name="geometry">
       <rect>
-       <x>800</x>
-       <y>750</y>
+       <x>920</x>
+       <y>790</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -253,8 +253,8 @@
     <widget class="QLabel" name="label_27">
      <property name="geometry">
       <rect>
-       <x>690</x>
-       <y>750</y>
+       <x>810</x>
+       <y>790</y>
        <width>101</width>
        <height>20</height>
       </rect>
@@ -275,8 +275,8 @@
     <widget class="QLabel" name="label_29">
      <property name="geometry">
       <rect>
-       <x>750</x>
-       <y>640</y>
+       <x>870</x>
+       <y>680</y>
        <width>51</width>
        <height>51</height>
       </rect>
@@ -297,8 +297,8 @@
     <widget class="QLabel" name="label_30">
      <property name="geometry">
       <rect>
-       <x>800</x>
-       <y>650</y>
+       <x>920</x>
+       <y>690</y>
        <width>16</width>
        <height>21</height>
       </rect>
@@ -321,8 +321,8 @@
     <widget class="QLabel" name="label_31">
      <property name="geometry">
       <rect>
-       <x>900</x>
-       <y>650</y>
+       <x>1020</x>
+       <y>690</y>
        <width>41</width>
        <height>20</height>
       </rect>
@@ -343,8 +343,8 @@
     <widget class="QLabel" name="label_32">
      <property name="geometry">
       <rect>
-       <x>900</x>
-       <y>630</y>
+       <x>1020</x>
+       <y>670</y>
        <width>41</width>
        <height>31</height>
       </rect>
@@ -365,8 +365,8 @@
     <widget class="QLabel" name="label_33">
      <property name="geometry">
       <rect>
-       <x>900</x>
-       <y>670</y>
+       <x>1020</x>
+       <y>710</y>
        <width>41</width>
        <height>31</height>
       </rect>
@@ -387,8 +387,8 @@
     <widget class="QLabel" name="label_34">
      <property name="geometry">
       <rect>
-       <x>951</x>
-       <y>640</y>
+       <x>1071</x>
+       <y>680</y>
        <width>20</width>
        <height>51</height>
       </rect>
@@ -409,8 +409,8 @@
     <widget class="QLabel" name="label_35">
      <property name="geometry">
       <rect>
-       <x>750</x>
-       <y>720</y>
+       <x>870</x>
+       <y>760</y>
        <width>31</width>
        <height>41</height>
       </rect>
@@ -431,8 +431,8 @@
     <widget class="QLabel" name="label_36">
      <property name="geometry">
       <rect>
-       <x>760</x>
-       <y>780</y>
+       <x>880</x>
+       <y>820</y>
        <width>31</width>
        <height>41</height>
       </rect>
@@ -453,8 +453,8 @@
     <widget class="QLabel" name="label_37">
      <property name="geometry">
       <rect>
-       <x>900</x>
-       <y>750</y>
+       <x>1020</x>
+       <y>790</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -475,8 +475,8 @@
     <widget class="QLabel" name="label_38">
      <property name="geometry">
       <rect>
-       <x>750</x>
-       <y>510</y>
+       <x>870</x>
+       <y>550</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -497,8 +497,8 @@
     <widget class="QLabel" name="label_39">
      <property name="geometry">
       <rect>
-       <x>750</x>
-       <y>570</y>
+       <x>870</x>
+       <y>610</y>
        <width>31</width>
        <height>31</height>
       </rect>
@@ -519,8 +519,8 @@
     <widget class="QLabel" name="label_40">
      <property name="geometry">
       <rect>
-       <x>910</x>
-       <y>560</y>
+       <x>1030</x>
+       <y>600</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -541,8 +541,8 @@
     <widget class="QLabel" name="label_41">
      <property name="geometry">
       <rect>
-       <x>900</x>
-       <y>520</y>
+       <x>1020</x>
+       <y>560</y>
        <width>41</width>
        <height>31</height>
       </rect>
@@ -563,8 +563,8 @@
     <widget class="QLabel" name="label_8">
      <property name="geometry">
       <rect>
-       <x>604</x>
-       <y>740</y>
+       <x>724</x>
+       <y>780</y>
        <width>41</width>
        <height>51</height>
       </rect>
@@ -585,56 +585,11 @@
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
-    <widget class="ClickableLabel" name="PlusMinus">
-     <property name="geometry">
-      <rect>
-       <x>680</x>
-       <y>170</y>
-       <width>41</width>
-       <height>201</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>16</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>+-</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-     <property name="margin">
-      <number>3</number>
-     </property>
-    </widget>
-    <widget class="ClickableLabel" name="MinusPlus">
-     <property name="geometry">
-      <rect>
-       <x>610</x>
-       <y>170</y>
-       <width>41</width>
-       <height>201</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>16</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>-+</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
     <widget class="QLabel" name="SlopeIntenseLbl">
      <property name="geometry">
       <rect>
-       <x>680</x>
-       <y>500</y>
+       <x>800</x>
+       <y>540</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -655,8 +610,8 @@
     <widget class="QLabel" name="SlopeUoltLbl">
      <property name="geometry">
       <rect>
-       <x>680</x>
-       <y>570</y>
+       <x>800</x>
+       <y>610</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -677,8 +632,8 @@
     <widget class="QLabel" name="SlopeResultLbl">
      <property name="geometry">
       <rect>
-       <x>820</x>
-       <y>530</y>
+       <x>940</x>
+       <y>570</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -699,8 +654,8 @@
     <widget class="QLabel" name="ForceResistLbl">
      <property name="geometry">
       <rect>
-       <x>680</x>
-       <y>640</y>
+       <x>800</x>
+       <y>680</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -721,8 +676,8 @@
     <widget class="QLabel" name="ForceSlopeLbl">
      <property name="geometry">
       <rect>
-       <x>820</x>
-       <y>640</y>
+       <x>940</x>
+       <y>680</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -743,8 +698,8 @@
     <widget class="QLabel" name="ForceResultLbl">
      <property name="geometry">
       <rect>
-       <x>970</x>
-       <y>640</y>
+       <x>1090</x>
+       <y>680</y>
        <width>81</width>
        <height>51</height>
       </rect>
@@ -765,8 +720,8 @@
     <widget class="QLabel" name="ResistInUoltAnodLbl">
      <property name="geometry">
       <rect>
-       <x>680</x>
-       <y>710</y>
+       <x>800</x>
+       <y>750</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -787,8 +742,8 @@
     <widget class="QLabel" name="ResistInForceIntenseLbl">
      <property name="geometry">
       <rect>
-       <x>680</x>
-       <y>780</y>
+       <x>800</x>
+       <y>820</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -809,8 +764,8 @@
     <widget class="QLabel" name="ResistInResultLbl">
      <property name="geometry">
       <rect>
-       <x>820</x>
-       <y>740</y>
+       <x>940</x>
+       <y>780</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -828,20 +783,23 @@
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
-    <widget class="QLabel" name="LampMode">
+    <widget class="ClickableLabel" name="LampMode">
      <property name="geometry">
       <rect>
-       <x>350</x>
-       <y>240</y>
-       <width>241</width>
-       <height>41</height>
+       <x>400</x>
+       <y>80</y>
+       <width>491</width>
+       <height>61</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Verdana</family>
-       <pointsize>18</pointsize>
+       <pointsize>30</pointsize>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>Лампа заперта</string>
@@ -853,8 +811,8 @@
     <widget class="QGraphicsView" name="graphicsView">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>40</y>
+       <x>110</x>
+       <y>80</y>
        <width>281</width>
        <height>431</height>
       </rect>
@@ -881,8 +839,8 @@
     <widget class="QLabel" name="UoltGridLbl">
      <property name="geometry">
       <rect>
-       <x>409</x>
-       <y>600</y>
+       <x>480</x>
+       <y>640</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -903,8 +861,8 @@
     <widget class="QLabel" name="IntenseForceLbl">
      <property name="geometry">
       <rect>
-       <x>409</x>
-       <y>750</y>
+       <x>480</x>
+       <y>790</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -925,8 +883,8 @@
     <widget class="QLabel" name="label_15">
      <property name="geometry">
       <rect>
-       <x>139</x>
-       <y>610</y>
+       <x>210</x>
+       <y>650</y>
        <width>251</width>
        <height>31</height>
       </rect>
@@ -947,8 +905,8 @@
     <widget class="QLabel" name="label_10">
      <property name="geometry">
       <rect>
-       <x>99</x>
-       <y>620</y>
+       <x>170</x>
+       <y>660</y>
        <width>16</width>
        <height>26</height>
       </rect>
@@ -972,8 +930,8 @@
     <widget class="QLabel" name="label_44">
      <property name="geometry">
       <rect>
-       <x>489</x>
-       <y>610</y>
+       <x>560</x>
+       <y>650</y>
        <width>31</width>
        <height>31</height>
       </rect>
@@ -994,8 +952,8 @@
     <widget class="QLabel" name="label_42">
      <property name="geometry">
       <rect>
-       <x>489</x>
-       <y>530</y>
+       <x>560</x>
+       <y>570</y>
        <width>61</width>
        <height>51</height>
       </rect>
@@ -1016,8 +974,8 @@
     <widget class="QSlider" name="ResistGridSlider">
      <property name="geometry">
       <rect>
-       <x>139</x>
-       <y>564</y>
+       <x>210</x>
+       <y>604</y>
        <width>271</width>
        <height>21</height>
       </rect>
@@ -1038,8 +996,8 @@
     <widget class="QSlider" name="UoltAnodSlider">
      <property name="geometry">
       <rect>
-       <x>139</x>
-       <y>720</y>
+       <x>210</x>
+       <y>760</y>
        <width>271</width>
        <height>21</height>
       </rect>
@@ -1054,8 +1012,8 @@
     <widget class="QLabel" name="label_16">
      <property name="geometry">
       <rect>
-       <x>139</x>
-       <y>760</y>
+       <x>210</x>
+       <y>800</y>
        <width>251</width>
        <height>31</height>
       </rect>
@@ -1076,8 +1034,8 @@
     <widget class="QLabel" name="label_12">
      <property name="geometry">
       <rect>
-       <x>99</x>
-       <y>554</y>
+       <x>170</x>
+       <y>594</y>
        <width>16</width>
        <height>26</height>
       </rect>
@@ -1101,8 +1059,8 @@
     <widget class="QLabel" name="label_43">
      <property name="geometry">
       <rect>
-       <x>489</x>
-       <y>690</y>
+       <x>560</x>
+       <y>730</y>
        <width>31</width>
        <height>31</height>
       </rect>
@@ -1123,8 +1081,8 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>680</y>
+       <x>141</x>
+       <y>720</y>
        <width>26</width>
        <height>43</height>
       </rect>
@@ -1145,8 +1103,8 @@
     <widget class="QLabel" name="label_13">
      <property name="geometry">
       <rect>
-       <x>139</x>
-       <y>524</y>
+       <x>210</x>
+       <y>564</y>
        <width>291</width>
        <height>31</height>
       </rect>
@@ -1167,8 +1125,8 @@
     <widget class="QLabel" name="label_14">
      <property name="geometry">
       <rect>
-       <x>139</x>
-       <y>680</y>
+       <x>210</x>
+       <y>720</y>
        <width>201</width>
        <height>31</height>
       </rect>
@@ -1189,8 +1147,8 @@
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>74</x>
-       <y>750</y>
+       <x>145</x>
+       <y>790</y>
        <width>21</width>
        <height>43</height>
       </rect>
@@ -1211,8 +1169,8 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>530</y>
+       <x>141</x>
+       <y>570</y>
        <width>25</width>
        <height>43</height>
       </rect>
@@ -1236,8 +1194,8 @@
     <widget class="QLabel" name="ResistGridLbl">
      <property name="geometry">
       <rect>
-       <x>429</x>
-       <y>530</y>
+       <x>500</x>
+       <y>570</y>
        <width>51</width>
        <height>51</height>
       </rect>
@@ -1258,8 +1216,8 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>600</y>
+       <x>141</x>
+       <y>640</y>
        <width>26</width>
        <height>43</height>
       </rect>
@@ -1280,8 +1238,8 @@
     <widget class="QLabel" name="label_45">
      <property name="geometry">
       <rect>
-       <x>489</x>
-       <y>760</y>
+       <x>560</x>
+       <y>800</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -1302,8 +1260,8 @@
     <widget class="QLabel" name="label_9">
      <property name="geometry">
       <rect>
-       <x>99</x>
-       <y>770</y>
+       <x>170</x>
+       <y>810</y>
        <width>16</width>
        <height>26</height>
       </rect>
@@ -1327,8 +1285,8 @@
     <widget class="QLabel" name="UoltAnodLbl">
      <property name="geometry">
       <rect>
-       <x>429</x>
-       <y>680</y>
+       <x>500</x>
+       <y>720</y>
        <width>51</width>
        <height>51</height>
       </rect>
@@ -1349,8 +1307,8 @@
     <widget class="QLabel" name="label_11">
      <property name="geometry">
       <rect>
-       <x>99</x>
-       <y>699</y>
+       <x>170</x>
+       <y>739</y>
        <width>16</width>
        <height>26</height>
       </rect>
@@ -1374,10 +1332,10 @@
     <widget class="QGraphicsView" name="graphicsView_2">
      <property name="geometry">
       <rect>
-       <x>740</x>
-       <y>100</y>
-       <width>321</width>
-       <height>321</height>
+       <x>620</x>
+       <y>160</y>
+       <width>521</width>
+       <height>351</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -1399,17 +1357,69 @@
       </brush>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QGraphicsView" name="grViewPlus">
      <property name="geometry">
       <rect>
-       <x>380</x>
-       <y>320</y>
-       <width>181</width>
-       <height>41</height>
+       <x>490</x>
+       <y>260</y>
+       <width>61</width>
+       <height>211</height>
       </rect>
      </property>
-     <property name="text">
-      <string>PushButton</string>
+     <property name="cursor" stdset="0">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="verticalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
+     </property>
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
+     </property>
+     <property name="backgroundBrush">
+      <brush brushstyle="NoBrush">
+       <color alpha="255">
+        <red>0</red>
+        <green>255</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </property>
+     <property name="renderHints">
+      <set>QPainter::HighQualityAntialiasing</set>
+     </property>
+    </widget>
+    <widget class="QGraphicsView" name="grViewMinus">
+     <property name="geometry">
+      <rect>
+       <x>550</x>
+       <y>260</y>
+       <width>61</width>
+       <height>211</height>
+      </rect>
+     </property>
+     <property name="cursor" stdset="0">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="verticalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
+     </property>
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
+     </property>
+     <property name="backgroundBrush">
+      <brush brushstyle="NoBrush">
+       <color alpha="255">
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
      </property>
     </widget>
    </widget>
