--- a/Triod/demonstration.ui
+++ b/Triod/demonstration.ui
@@ -27,36 +27,11 @@
    </property>
    <widget class="QWidget" name="instruction"/>
    <widget class="QWidget" name="processTriod">
-    <widget class="ClickableLabel" name="goMenu">
-     <property name="geometry">
-      <rect>
-       <x>460</x>
-       <y>880</y>
-       <width>351</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Verdana</family>
-       <pointsize>22</pointsize>
-      </font>
-     </property>
-     <property name="cursor">
-      <cursorShape>PointingHandCursor</cursorShape>
-     </property>
-     <property name="text">
-      <string>Вернуться в меню</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
        <x>730</x>
-       <y>570</y>
+       <y>540</y>
        <width>31</width>
        <height>43</height>
       </rect>
@@ -78,7 +53,7 @@
      <property name="geometry">
       <rect>
        <x>730</x>
-       <y>680</y>
+       <y>640</y>
        <width>31</width>
        <height>43</height>
       </rect>
@@ -100,7 +75,7 @@
      <property name="geometry">
       <rect>
        <x>770</x>
-       <y>790</y>
+       <y>750</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -122,7 +97,7 @@
      <property name="geometry">
       <rect>
        <x>770</x>
-       <y>690</y>
+       <y>650</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -144,7 +119,7 @@
      <property name="geometry">
       <rect>
        <x>770</x>
-       <y>580</y>
+       <y>550</y>
        <width>16</width>
        <height>31</height>
       </rect>
@@ -166,7 +141,7 @@
      <property name="geometry">
       <rect>
        <x>810</x>
-       <y>580</y>
+       <y>550</y>
        <width>101</width>
        <height>20</height>
       </rect>
@@ -188,7 +163,7 @@
      <property name="geometry">
       <rect>
        <x>920</x>
-       <y>580</y>
+       <y>550</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -210,7 +185,7 @@
      <property name="geometry">
       <rect>
        <x>1020</x>
-       <y>580</y>
+       <y>550</y>
        <width>41</width>
        <height>20</height>
       </rect>
@@ -232,7 +207,7 @@
      <property name="geometry">
       <rect>
        <x>920</x>
-       <y>790</y>
+       <y>750</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -254,7 +229,7 @@
      <property name="geometry">
       <rect>
        <x>810</x>
-       <y>790</y>
+       <y>750</y>
        <width>101</width>
        <height>20</height>
       </rect>
@@ -276,7 +251,7 @@
      <property name="geometry">
       <rect>
        <x>870</x>
-       <y>680</y>
+       <y>640</y>
        <width>51</width>
        <height>51</height>
       </rect>
@@ -298,7 +273,7 @@
      <property name="geometry">
       <rect>
        <x>920</x>
-       <y>690</y>
+       <y>650</y>
        <width>16</width>
        <height>21</height>
       </rect>
@@ -322,7 +297,7 @@
      <property name="geometry">
       <rect>
        <x>1020</x>
-       <y>690</y>
+       <y>650</y>
        <width>41</width>
        <height>20</height>
       </rect>
@@ -344,7 +319,7 @@
      <property name="geometry">
       <rect>
        <x>1020</x>
-       <y>670</y>
+       <y>630</y>
        <width>41</width>
        <height>31</height>
       </rect>
@@ -366,7 +341,7 @@
      <property name="geometry">
       <rect>
        <x>1020</x>
-       <y>710</y>
+       <y>670</y>
        <width>41</width>
        <height>31</height>
       </rect>
@@ -388,7 +363,7 @@
      <property name="geometry">
       <rect>
        <x>1071</x>
-       <y>680</y>
+       <y>640</y>
        <width>20</width>
        <height>51</height>
       </rect>
@@ -410,7 +385,7 @@
      <property name="geometry">
       <rect>
        <x>870</x>
-       <y>760</y>
+       <y>720</y>
        <width>31</width>
        <height>41</height>
       </rect>
@@ -432,7 +407,7 @@
      <property name="geometry">
       <rect>
        <x>880</x>
-       <y>820</y>
+       <y>780</y>
        <width>31</width>
        <height>41</height>
       </rect>
@@ -454,7 +429,7 @@
      <property name="geometry">
       <rect>
        <x>1020</x>
-       <y>790</y>
+       <y>750</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -476,7 +451,7 @@
      <property name="geometry">
       <rect>
        <x>870</x>
-       <y>550</y>
+       <y>520</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -498,7 +473,7 @@
      <property name="geometry">
       <rect>
        <x>870</x>
-       <y>610</y>
+       <y>580</y>
        <width>31</width>
        <height>31</height>
       </rect>
@@ -520,7 +495,7 @@
      <property name="geometry">
       <rect>
        <x>1030</x>
-       <y>600</y>
+       <y>570</y>
        <width>21</width>
        <height>31</height>
       </rect>
@@ -542,7 +517,7 @@
      <property name="geometry">
       <rect>
        <x>1020</x>
-       <y>560</y>
+       <y>530</y>
        <width>41</width>
        <height>31</height>
       </rect>
@@ -564,7 +539,7 @@
      <property name="geometry">
       <rect>
        <x>724</x>
-       <y>780</y>
+       <y>740</y>
        <width>41</width>
        <height>51</height>
       </rect>
@@ -589,7 +564,7 @@
      <property name="geometry">
       <rect>
        <x>800</x>
-       <y>540</y>
+       <y>510</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -611,7 +586,7 @@
      <property name="geometry">
       <rect>
        <x>800</x>
-       <y>610</y>
+       <y>580</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -633,7 +608,7 @@
      <property name="geometry">
       <rect>
        <x>940</x>
-       <y>570</y>
+       <y>540</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -655,7 +630,7 @@
      <property name="geometry">
       <rect>
        <x>800</x>
-       <y>680</y>
+       <y>640</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -677,7 +652,7 @@
      <property name="geometry">
       <rect>
        <x>940</x>
-       <y>680</y>
+       <y>640</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -699,7 +674,7 @@
      <property name="geometry">
       <rect>
        <x>1090</x>
-       <y>680</y>
+       <y>640</y>
        <width>81</width>
        <height>51</height>
       </rect>
@@ -721,7 +696,7 @@
      <property name="geometry">
       <rect>
        <x>800</x>
-       <y>750</y>
+       <y>710</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -743,7 +718,7 @@
      <property name="geometry">
       <rect>
        <x>800</x>
-       <y>820</y>
+       <y>780</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -765,7 +740,7 @@
      <property name="geometry">
       <rect>
        <x>940</x>
-       <y>780</y>
+       <y>740</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -786,10 +761,10 @@
     <widget class="ClickableLabel" name="LampMode">
      <property name="geometry">
       <rect>
-       <x>400</x>
-       <y>80</y>
+       <x>410</x>
+       <y>50</y>
        <width>491</width>
-       <height>61</height>
+       <height>71</height>
       </rect>
      </property>
      <property name="font">
@@ -799,7 +774,19 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true"/>
+      <string notr="true">border-color: black;
+border-radius: 20px;
+border-style: groove;
+border-width: 2px</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Panel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>2</number>
      </property>
      <property name="text">
       <string>Лампа заперта</string>
@@ -812,10 +799,19 @@
      <property name="geometry">
       <rect>
        <x>110</x>
-       <y>80</y>
+       <y>50</y>
        <width>281</width>
        <height>431</height>
       </rect>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+     <property name="whatsThis">
+      <string comment="'Это вот лампа&quot;" extracomment="&quot;Вот пжлста лампа&quot;"/>
+     </property>
+     <property name="accessibleDescription">
+      <string comment="'Это вот лампа&quot;" extracomment="'Это вот лампа&quot;"/>
      </property>
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
@@ -840,7 +836,7 @@
      <property name="geometry">
       <rect>
        <x>480</x>
-       <y>640</y>
+       <y>610</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -862,7 +858,7 @@
      <property name="geometry">
       <rect>
        <x>480</x>
-       <y>790</y>
+       <y>760</y>
        <width>71</width>
        <height>51</height>
       </rect>
@@ -884,7 +880,7 @@
      <property name="geometry">
       <rect>
        <x>210</x>
-       <y>650</y>
+       <y>620</y>
        <width>251</width>
        <height>31</height>
       </rect>
@@ -906,7 +902,7 @@
      <property name="geometry">
       <rect>
        <x>170</x>
-       <y>660</y>
+       <y>630</y>
        <width>16</width>
        <height>26</height>
       </rect>
@@ -931,7 +927,7 @@
      <property name="geometry">
       <rect>
        <x>560</x>
-       <y>650</y>
+       <y>620</y>
        <width>31</width>
        <height>31</height>
       </rect>
@@ -953,7 +949,7 @@
      <property name="geometry">
       <rect>
        <x>560</x>
-       <y>570</y>
+       <y>540</y>
        <width>61</width>
        <height>51</height>
       </rect>
@@ -975,7 +971,7 @@
      <property name="geometry">
       <rect>
        <x>210</x>
-       <y>604</y>
+       <y>574</y>
        <width>271</width>
        <height>21</height>
       </rect>
@@ -997,7 +993,7 @@
      <property name="geometry">
       <rect>
        <x>210</x>
-       <y>760</y>
+       <y>730</y>
        <width>271</width>
        <height>21</height>
       </rect>
@@ -1013,7 +1009,7 @@
      <property name="geometry">
       <rect>
        <x>210</x>
-       <y>800</y>
+       <y>770</y>
        <width>251</width>
        <height>31</height>
       </rect>
@@ -1035,7 +1031,7 @@
      <property name="geometry">
       <rect>
        <x>170</x>
-       <y>594</y>
+       <y>564</y>
        <width>16</width>
        <height>26</height>
       </rect>
@@ -1060,7 +1056,7 @@
      <property name="geometry">
       <rect>
        <x>560</x>
-       <y>730</y>
+       <y>700</y>
        <width>31</width>
        <height>31</height>
       </rect>
@@ -1082,7 +1078,7 @@
      <property name="geometry">
       <rect>
        <x>141</x>
-       <y>720</y>
+       <y>690</y>
        <width>26</width>
        <height>43</height>
       </rect>
@@ -1104,7 +1100,7 @@
      <property name="geometry">
       <rect>
        <x>210</x>
-       <y>564</y>
+       <y>534</y>
        <width>291</width>
        <height>31</height>
       </rect>
@@ -1126,7 +1122,7 @@
      <property name="geometry">
       <rect>
        <x>210</x>
-       <y>720</y>
+       <y>690</y>
        <width>201</width>
        <height>31</height>
       </rect>
@@ -1148,7 +1144,7 @@
      <property name="geometry">
       <rect>
        <x>145</x>
-       <y>790</y>
+       <y>760</y>
        <width>21</width>
        <height>43</height>
       </rect>
@@ -1170,7 +1166,7 @@
      <property name="geometry">
       <rect>
        <x>141</x>
-       <y>570</y>
+       <y>540</y>
        <width>25</width>
        <height>43</height>
       </rect>
@@ -1195,7 +1191,7 @@
      <property name="geometry">
       <rect>
        <x>500</x>
-       <y>570</y>
+       <y>540</y>
        <width>51</width>
        <height>51</height>
       </rect>
@@ -1217,7 +1213,7 @@
      <property name="geometry">
       <rect>
        <x>141</x>
-       <y>640</y>
+       <y>610</y>
        <width>26</width>
        <height>43</height>
       </rect>
@@ -1239,7 +1235,7 @@
      <property name="geometry">
       <rect>
        <x>560</x>
-       <y>800</y>
+       <y>770</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -1261,7 +1257,7 @@
      <property name="geometry">
       <rect>
        <x>170</x>
-       <y>810</y>
+       <y>780</y>
        <width>16</width>
        <height>26</height>
       </rect>
@@ -1286,7 +1282,7 @@
      <property name="geometry">
       <rect>
        <x>500</x>
-       <y>720</y>
+       <y>690</y>
        <width>51</width>
        <height>51</height>
       </rect>
@@ -1308,7 +1304,7 @@
      <property name="geometry">
       <rect>
        <x>170</x>
-       <y>739</y>
+       <y>709</y>
        <width>16</width>
        <height>26</height>
       </rect>
@@ -1333,7 +1329,7 @@
      <property name="geometry">
       <rect>
        <x>620</x>
-       <y>160</y>
+       <y>130</y>
        <width>521</width>
        <height>351</height>
       </rect>
@@ -1361,7 +1357,7 @@
      <property name="geometry">
       <rect>
        <x>490</x>
-       <y>260</y>
+       <y>230</y>
        <width>61</width>
        <height>211</height>
       </rect>
@@ -1395,7 +1391,7 @@
      <property name="geometry">
       <rect>
        <x>550</x>
-       <y>260</y>
+       <y>230</y>
        <width>61</width>
        <height>211</height>
       </rect>
@@ -1420,6 +1416,37 @@
         <blue>0</blue>
        </color>
       </brush>
+     </property>
+    </widget>
+    <widget class="ClickableLabel" name="goToMenu">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>850</y>
+       <width>421</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Verdana</family>
+       <pointsize>24</pointsize>
+      </font>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-color: black;
+border-radius: 20px;
+border-style: groove;
+border-width: 2px</string>
+     </property>
+     <property name="text">
+      <string>Вернуться в меню</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </widget>
